# paper-mind

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  backup.sh  config.py  db.py  docker-compose.yml  llm.py  main.py  pdf_processing.py  pyproject.toml  run.sh
pages/: chat.py  dashboard.py  graph.py  layout.py  paper_detail.py  upload.py
